fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,6 @@ html {
   font-size: 1em;
   line-height: 1;
   background: #222222;
-  overflow: hidden;
   font-family: sans-serif;
 }
 
